Clean up jtreg run/compile directives, attend to other review comments